<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/main_material_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/activity_main_toolbar"
            layout="@layout/activity_main_toolbar" />

        <include
            android:id="@+id/activity_main_search_bar"
            layout="@layout/activity_main_search_bar" />
    </com.google.android.material.appbar.MaterialToolbar>

    <Spinner
        android:id="@+id/main_spinner_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/filter_options"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_material_toolbar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_by"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/main_spinner_filter"
        app:layout_constraintEnd_toStartOf="@+id/main_spinner_filter"
        app:layout_constraintTop_toBottomOf="@id/main_material_toolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_recycler_view_restaurants"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_spinner_filter"
        tools:listitem="@layout/list_item_restaurant" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/main_not_found"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|top"
        android:padding="16dp"
        android:text="@string/format_item_not_found"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_spinner_filter"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>